@@ -12,8 +12,9 @@ Bugfix
      In the context of SSL, this resulted in handshake failure. #1351
 
 Changes
-   * Add guard to validate that out_left can not be negative. Raised by 
-     samoconnor in #1245.
+   * Verify that when (f_send, f_recv and f_recv_timeout) send or receive 
+     more than the required length an error is returned. Raised by 
+     Sam O'Connor in #1245.
 
 = mbed TLS 2.1.10 branch released 2018-02-03
 
